<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_black_18dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_looks_one_black_18dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_looks_two_black_18dp"
            android:title="@string/menu_slideshow" />

        <menu>
            <item
                android:id="@+id/nav_homeư"
                android:icon="@drawable/baseline_cloud_black_18dp"
                android:title="@string/menu_4" />
            <item
                android:id="@+id/nav_galleryư"
                android:icon="@drawable/baseline_all_inclusive_black_18dp"
                android:title="@string/menu_5" />

        </menu>
    </group>


</menu>
